# open-box

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_zh_CN.md  pyproject.toml  setup.py
.github/workflows/: codecov.yml  publish_on_release.yml  test.yml
docs/: requirements.txt
docs/en/: conf.py  index.rst
docs/en/advanced_usage/: advanced_usage.rst  auto_algorithm_selection.md  complex_space.md  early_stop.md  parallel_evaluation.md  transfer_learning.md
docs/en/articles/: openbox_LightGBM.md  openbox_XGBoost.md  openbox_intro.md
docs/en/change_logs/: change_logs.rst
docs/en/examples/: ask_and_tell.md  examples.rst  multi_objective.md  multi_objective_with_constraint.md  single_objective_hpo.md  single_objective_with_constraint.md
docs/en/installation/: install_microsoft_vc.md  install_pyrfr.md  install_swig.md  installation_guide.md  openmp_macos.md
docs/en/maintainers_guide/: docs.md  github_actions.md  releases.md
docs/en/openbox_as_service/: service_deployment.md  (+2 more)
docs/zh_CN/: .readthedocs.yml  conf.py  index.rst
examples/: ask_and_tell_interface.py  distributed_optimization.py  evaluate_async_parallel_optimization.py  evaluate_sync_parallel_optimization.py  my_example.py  optimize_multi_objective.py  optimize_multi_objective_with_constraint.py  optimize_problem_with_constraint.py  quick_example.py  quick_example_with_json.py  test.py  test1.py  test_ea_math_mo.py  test_math.py  transfer_learning.py  tuning_lightgbm.py  tuning_xgboost.py
examples/env/: carla_manage.py  env_manage.py
openbox/: __init__.py  __main__.py  pkginfo.py
openbox/acq_maximizer/: ei_optimization.py
openbox/acq_optimizer/: __init__.py  basic_maximizer.py  build.py
openbox/acquisition_function/: acquisition.py  multi_objective_acquisition.py
openbox/artifact/: remote_advisor.py
openbox/core/: async_batch_advisor.py  base.py  base_advisor.py  ea_advisor.py  generic_advisor.py  mc_advisor.py  mf_batch_advisor.py  random_advisor.py  sync_batch_advisor.py  tpe_advisor.py
openbox/optimizer/: base.py  generic_smbo.py  message_queue_smbo.py  nsga_base.py  nsga_optimizer.py  parallel_smbo.py
openbox/utils/: early_stop.py  history.py  history_container.py  platform.py  platypus_utils.py  samplers.py  test_install.py  util_funcs.py
openbox/visualization/: __init__.py  base_visualizer.py  html_visualizer.py  plot_convergence.py  plot_pareto_front.py  visualize_hiplot.py
requirements/: dev.txt  dev_py36.txt  extra.txt  main.txt  main_py36.txt  service.txt
requirements/dev/: build.txt  docs.txt  format.txt  test.txt
test/: test_web.py
test/acq_optimizer/: test_basic_maximizer.py  test_build.py  test_random_configuration_chooser.py
test/acquisition_function/: test_acquisition.py
test/ci_examples/: test_create_smbo.py  test_error_objective_func.py  test_smbo.py
test/core/: test_async_batch_advisor.py  test_base.py  test_base_advisor.py  test_ea_advisor.py  test_generic_advisor.py  test_mc_advisor.py  test_mf_batch_advisor.py  test_random_advisor.py  test_sync_batch_advisor.py  test_tpe_advisor.py
test/ea/: test_ea_math.py  test_ea_math_constrained.py  test_ea_math_mo.py
test/examples/: test_examples_ask_and_tell_interface.py  test_examples_evaluate_async_parallel_optimization.py  test_examples_evaluate_sync_parallel_optimization.py  test_examples_optimize_multi_objective.py  test_examples_optimize_multi_objective_with_constraint.py  test_examples_optimize_problem_with_constraint.py  test_examples_quick_example.py  test_examples_quick_example_with_json.py  test_examples_transfer_learning.py
test/fixtures/: acqusition_funcs.py  configspace.py  funcs.py  history.py  surrogate_models.py
test/function/: test_time_limit.py
test/online/: benchmark_info.py  test_blendsearch_lgb_local_datasets.py  test_blendsearch_lgb_online_datasets.py  test_lightgbm.py  test_linebo.py  test_online_math.py  test_safeopt.py
test/optimizer/: test_base.py  test_generic_smbo.py  test_message_queue_smbo.py  test_mqsmbo.py  test_nsga.py  test_nsga2.py  test_nsga_base.py  test_nsga_optimizer.py  test_parallel_smbo.py  test_psmbo.py  test_smbo.py  test_smbo_ehvi.py  test_smbo_ehvic.py  test_smbo_eic.py  test_smbo_hpo.py  test_smbo_lightgbm.py  test_smbo_lightgbm_new.py  test_smbo_mccmo.py  test_smbo_mcehvi.py  test_smbo_mcei.py  test_smbo_mceic.py  test_smbo_mcparego.py  test_smbo_mo.py  test_smbo_parego.py  test_smbo_scipy.py  test_smbo_turbo.py  test_smbo_xgboost.py
test/pso/: test_pso_math.py
test/reproduction/: mqsmbo_modified.py
test/service/: access_mongodb.py  test_db_object.py
test/space/: test_conditioned_space.py  test_conditioned_space_branin.py
test/surrogate/: benchmark_math.py  evaluate_new_surrogate.py  test_lightgbm.py  test_skrf.py
test/utils/: test_create_smbo.py  test_early_stop.py  test_history.py  test_platypus_utils.py  test_samplers.py  test_transform.py  test_trust_region.py  test_util_funcs.py
(+173 files in other folders)
